--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -9,7 +9,7 @@
   <input type="submit" value="検索">
 }
   <div class ="contrainer">
-    <a href = "@routes.UserController.init(0)">新規作成</a>
+    <a href = "@routes.UserController.init(0)">新規作成(・ω・)/Hey!</a>
     <br>
     <table>
       <tr>
