テストの実装完了

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -17,6 +17,7 @@
         <th>学年</th>
         <th>身長</th>
         <th>好きな食べ物</th>
+        <th>誕生日</th>
         <th>作成日時</th>
         <th>更新日時</th>
       </tr>
@@ -27,6 +28,7 @@
           <td>@items.schoolYear</td>
           <td>@items.height</td>
           <td>@items.likeFood</td>
+          <td>@items.birthDay</td>
           <td>@items.createdAt</td>
           <td>@items.updatedAt</td>
           <td><a href ="@routes.UserController.init(items.id)">編集</a></td>
